--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -275,3 +275,14 @@ ru:
       long: ! '%d %B %Y, %H:%M'
       short: ! '%d %b, %H:%M'
     pm: вечера
+  activerecord:
+    errors:
+      models:
+        contract_paramter_type3:
+          attributes:
+            email:
+              invalid: 'Неверный формат электронной почты'
+        flag:
+          attributes:
+            val:
+              invalid: 'Неверный формат соглашения об рассылке смс'
