--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -286,3 +286,10 @@ ru:
           attributes:
             val:
               invalid: 'Неверный формат соглашения об рассылке смс'
+        contract_status_log:
+          attributes:
+            date1:
+              after: 'Дата должна быть позднее чем сегодня'
+              before: 'Дата должна раньше чем дата конца'
+            date2:
+              after: 'Дата должна быть позднее чем дата начала'
