real certs added, ecconnect connected, payment functional ready

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -293,3 +293,7 @@ ru:
               before: 'Дата должна раньше чем дата конца'
             date2:
               after: 'Дата должна быть позднее чем дата начала'
+  helpers:
+    submit:
+      ecconnect_payment:
+        create: "Далее"
