small tasks enable

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -289,10 +289,10 @@ ru:
         contract_status:
           attributes:
             date1:
-              after: 'Дата должна быть позднее чем сегодня'
-              before: 'Дата должна раньше чем дата конца'
+              after: 'Статус можно изменить с завтрашнего дня'
+              before: 'Дата начала действия статуса не может быть раньше даты окончания действия статуса'
             date2:
-              after: 'Дата должна быть позднее чем дата начала'
+              after: 'Дата окончания действия статуса не может быть раньше даты начала действия статуса'
   helpers:
     submit:
       ecconnect_payment:
