small design change

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -3,10 +3,10 @@ ru:
     format: ! '%{attribute} %{message}'
     messages:
       accepted: нужно подтвердить
-      blank: не может быть пустым
-      blank_in_locale: не может быть пустым
+      blank: поле не может быть пустым
+      blank_in_locale:  поле не может быть пустым
       confirmation: не совпадает с подтверждением
-      empty: не может быть пустым
+      empty:  поле не может быть пустым
       equal_to: может иметь лишь значение, равное %{count}
       even: может иметь лишь нечетное значение
       exclusion: имеет зарезервированное значение
