create full balace on the period, and tariff fix

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -118,6 +118,20 @@ ru:
     - октября
     - ноября
     - декабря
+    month_name:
+    -
+    - январь
+    - февраль
+    - март
+    - апрель
+    - май
+    - июнь
+    - июль
+    - август
+    - сентябрь
+    - октябрь
+    - ноябрь
+    - декабрь
     order:
     - :day
     - :month
