--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -286,7 +286,7 @@ ru:
     am: утра
     formats:
       default: ! '%a, %d %b %Y, %H:%M:%S %z'
-      long: ! '%d.%m.%Y., %H:%M'
+      long: ! '%d.%m.%Y, %H:%M'
       short: ! '%d %b, %H:%M'
     pm: вечера
   activerecord:
